# holmes-export

./: .gitignore  CMakeLists.txt  LICENSE  README.md
export/: csv_reader.hpp  export_dataset_1.cpp  export_dataset_1.hpp  export_dataset_2.cpp  export_dataset_2.hpp  export_dataset_3.cpp  export_dataset_3.hpp  export_histogram_nominal.cpp  export_histogram_numeric.cpp  export_mean_check.cpp  export_range_check.cpp  export_trimmed_mean.cpp  export_variance_check.cpp  histogram_nominal_check.hpp  jl_projector.hpp  range_check.hpp  trimmed_mean.hpp
export-scripts/: common.py  export_dataset1.py  export_dataset2.py  export_dataset3.py  export_histogram_nominal.py  export_histogram_numeric.py  export_mean_check.py  export_range_check.py  export_trimmed_mean.py  export_variance_check.py
